<resources>
    <string name="app_name">Movie Discovery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="all">All</string>
    <string name="most_popular">Most Popular</string>
    <string name="show_more">Show more</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="hi">Hi,</string>
    <string name="search_your_movie">Search your movie</string>
    <string name="categories">Categories</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release date</string>
</resources>