<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.login.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_new_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/image_frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_new_acc_txt">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@color/chip_background_color"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            <TextView
                android:id="@+id/addImageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/purple_700"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:boxBackgroundColor="@color/chip_background_color"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_frame_layout"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/chip_background_color"
            app:boxStrokeColor="@color/purple_700"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/chip_background_color"
            app:boxStrokeColor="@color/purple_700"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/signUp_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pass_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/purple_700"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:id="@+id/signInTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/already_have_acc_txt"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toBottomOf="@id/signUp_frameLayout" />
        <TextView
            android:id="@+id/already_have_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/signInTxt"
            app:layout_constraintBottom_toBottomOf="@id/signInTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>