<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".ui.movieDetails.MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/poster_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/poster_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_movie_place_holder" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/back_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:cardBackgroundColor="#653A3A3F"
                        app:cardCornerRadius="48dp"
                        app:cardElevation="0dp"
                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

                        <ImageView
                            android:id="@+id/back_btn"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_back" />
                    </androidx.cardview.widget.CardView>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_card"
                tools:text="Black Adam" />

            <ImageView
                android:id="@+id/run_time_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_run_time"
                app:layout_constraintStart_toStartOf="@id/movie_title"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <TextView
                android:id="@+id/run_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/run_time_img"
                app:layout_constraintStart_toEndOf="@id/run_time_img"
                app:layout_constraintTop_toTopOf="@id/run_time_img"
                tools:text="150 min" />

            <ImageView
                android:id="@+id/rating_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toEndOf="@id/run_time_value"
                app:layout_constraintTop_toTopOf="@id/run_time_img"
                tools:text="5.5" />

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rating_img"
                app:layout_constraintStart_toEndOf="@id/rating_img"
                app:layout_constraintTop_toTopOf="@id/rating_img"
                tools:text="7.5" />


            <TextView
                android:id="@+id/release_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/movie_title"
                app:layout_constraintTop_toBottomOf="@id/run_time_img" />

            <TextView
                android:id="@+id/release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/release_date_txt"
                app:layout_constraintTop_toBottomOf="@id/release_date_txt"
                tools:text="2020-5-20" />

            <TextView
                android:id="@+id/genre_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/release_date_txt"
                app:layout_constraintTop_toBottomOf="@id/release_date_value" />
            <LinearLayout
                android:id="@+id/genre_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/genre_txt"
                app:layout_constraintTop_toBottomOf="@id/genre_txt"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/genres_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="false"
                    app:chipSpacingVertical="1dp"
                    app:selectionRequired="false"
                    app:layout_constraintHorizontal_bias="0" />

            </LinearLayout>

            <TextView
                android:id="@+id/over_view_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="6dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre_layout"
                tools:text="Deep inside the mountain of Dovre, something gigantic awakens after being
trapped for a thousand years. Destroying everything in its path, the creature is fast
approaching the capital of Norway. But how do you stop something you thought only existed in Norwegian folklore?" />

            <TextView
                android:id="@+id/cast_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cast"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/over_view_txt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cast_txt"
                tools:listitem="@layout/cast_list_item" />

            <TextView
                android:id="@+id/similar_movies_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/similar_movies"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cast_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_movies_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similar_movies_txt"
                tools:listitem="@layout/similar_movies_list_item"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>